# spotify-weekly-mix

./: .dockerignore  .gitignore  .venv  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.yaml  export_saved_songs.py  generative_discovery.py  make-1month-rolling.py  make-3month-rolling.py  make-rolling.py  make-weekly-mix-saved-artists.py  make-weekly-mix.py  make_all_playlists.sh  make_weekly_mix.sh  populate_saved_songs.py  pyproject.toml  pytest.ini  saved_songs_eda.py
.beads/: issues.jsonl
.github/workflows/: docker-publish.yml
.roo/: mcp.json
docs/plans/: 2025-02-09-rolling-window-playlists.md  2026-02-09-generative-weekly-mix-design.md
scripts/: make_all_playlists.sh  run_all.sh
src/: analyze_unfollowed_artists.py  generative_discovery.py  make_rolling.py  make_weekly_mix.py  populate_saved_songs.py  saved_tracks_cache.py  weekly_mix_description.py  weekly_mix_selection.py  weekly_mix_state.py
tests/: test_generative_discovery.py  test_generative_discovery_live.py  test_weekly_mix_description.py  test_weekly_mix_selection.py  test_weekly_mix_state.py
